# intervju-transkribering

./: .gitignore  CLAUDE.md  DESKTOP_APP.md  INSTALLERA.md  JOELSTODO.MD  README.md  STARTA-TYSTTEXT.bat  START_GUIDE.md  STOPPA-TYSTTEXT.bat  TystText-Setup.bat  TystText-Start.bat  build-distribution.bat  build_exe.py  build_release.py  docker-compose.yml  launcher.py  package-lock.json  start-tysttext.bat  start.py
.claude/: settings.local.json
TystText-Distribution/: README.txt  STARTA.bat
backend/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt  tysttext-backend.spec
backend/app/: config.py  main.py
backend/app/api/v1/: anonymize.py  editor.py  export.py  jobs.py  models.py  router.py  settings.py  upload.py
backend/app/models/: __init__.py  job.py  segment.py  template.py
backend/app/schemas/: __init__.py  job.py  segment.py  upload.py
backend/app/services/: anonymization.py  diarization.py  transcription.py
backend/app/workers/: transcription_worker.py
backend/tests/: conftest.py  test_api.py
build-exe/: TystText-Backend.spec  runner.py
dist-backend/: .env.example  README.txt  Starta-TystText.bat  requirements.txt
dist-backend/app/: __init__.py  main.py
dist-backend/app/db/: database.py
dist-backend/app/models/: base.py  job.py  word.py
dist-backend/app/schemas/: job.py  segment.py
dist-backend/app/services/: anonymization.py  diarization.py  transcription.py
dist-backend/app/workers/: transcription_worker.py
frontend/: Dockerfile  next.config.js  next.config.static.js  package-lock.json  package.json  tailwind.config.ts
frontend/scripts/: build-backend.js
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/binaries/: tysttext-backend-x86_64-pc-windows-msvc.bat
frontend/src-tauri/src/: lib.rs  main.rs
frontend/src/app/: globals.css  layout.tsx  page.tsx
(+53 files in other folders)
